<resources>
    <string name="app_name">3DTetris</string>
    <string name="start">start</string>
    <string name="play">PLAY</string>
    <string name="rank_list">Rank List</string>
    <string name="settings">Settings</string>
    <string name="game_over">Game Over</string>
    <string name="restart">Restart</string>
    <string name="exit">Exit</string>
    <string name="game_over_message">You can restart or exit the game</string>
    <string name="pause">Pause</string>
    <string name="continue_">Continue</string>
    <string name="save">save</string>
    <string name="input_your_name_and_save_the_score">Input your name.</string>
    <string name="save_successful">Save successful</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
</resources>
